# Infrastructure

./: README.md
Conference-streaming/: readme.md
Hetzner server/: journal.md  nginx.conf
Hetzner server/sites-available/: 2020.brightcon.link  2021.brightcon.link  2022.brightcon.link  d-d-s.ch  files.brightway.dev  hub.brightway.dev  pandarus.brightway.dev
Hetzner-176.9.61.115/: journal.md
Hetzner-176.9.61.115/sites-available/: brightcon.link  cauldron.ch  pandarus.brightway.dev  school.d-d-s.ch
Hetzner-46.4.174.178/: journal.md
Hetzner-46.4.174.179/: journal.md
Hetzner-5.9.116.7/: journal.md
Hetzner-65.21.94.58/: journal.md
indico/compose/: .env  README.md  compose.yaml
indico/compose/nginx/: Containerfile  indico.conf  nginx.conf
indico/compose/postgresql/: Containerfile  indico.sh
indico/compose/uwsgi/: Containerfile  indico.conf  indico.ini
indico/flask_multipass_django/: Makefile  README.md  flask_multipass_django.py  pyproject.toml
indico/flask_multipass_django/example/: app.py  requirements.txt
indico/flask_multipass_django/example/templates/: index.html  login_form.html  login_selector.html
obsolete/Hetzner-5.9.116.7/sites-available/: hub.brightcon.link
obsolete/Hetzner-65.21.94.58/: journal.md
